--- a/css/landing.css
+++ b/css/landing.css
@@ -85,5 +85,34 @@
 
 
 @media screen and (max-width: 1200px){
-    
+    .main {
+        width: 100svw;
+        height: 100svh;
+        padding-top: 0;
+        background-image: url("../img/avif/counter_mobile.avif");
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .container {
+        position: static;
+        width: 95%;
+        height: 90%;
+        border-radius: 0.9375rem;
+        background: var(--bg-color-card-semi-transparent);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+        padding: 4rem 1rem;
+      }
+      .subtitle {
+        width: 100%;
+        font-family: "Quicksand-regular";
+      }
+      .countdown__container{
+        flex-direction: column;
+      }
 }
