--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,9 @@
   --color-red: #93250C;
   --color-green: #6B9F64;
   --color-brown: #69443D;
+
   --color-grey-light: #CCD5AF;
+  --color-grey-dark: #9ea588;
 
   --bg-color-header: rgba(237, 167, 46, 80%);--bg-color-footer: rgba(237, 167, 46, 95%);
 }
@@ -75,14 +77,46 @@ body {
   padding: 0;
   /* color: #333; */
   background-color: var(--color-grey-light);
+  overflow-x: hidden;
 }
 
-
+.grey-light{
+  background-color: var(--color-grey-light);
+  transition: background-color 0.5s ease;
+}
+.grey-dark{
+  background-color: var(--color-grey-dark);
+  transition: background-color 0.5s ease;
+}
 main {
-  padding-top: 6rem;
+  /* padding-top: 6rem;
   text-align: center;
-  min-height: 100vh;
+  min-height: 100vh; */
 }
 
-
-
+@media screen and (max-width: 1200px){
+  .body {
+      width: 100svw;
+      height: 100svh;
+    }
+    .container {
+      /* position: static;
+      width: 95%;
+      height: 90%;
+      border-radius: 0.9375rem;
+      background: var(--bg-color-card-semi-transparent);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      gap: 2rem;
+      padding: 4rem 1rem; */
+    }
+    .subtitle {
+      /* width: 100%;
+      font-family: "Quicksand-regular"; */
+    }
+    .countdown__container{
+      /* flex-direction: column; */
+    }
+}
