--- a/css/about.css
+++ b/css/about.css
@@ -4,10 +4,13 @@
   padding-top: 0;
   font-family: "Quicksand-medium";
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .hero__img {
   width: 100svw;
-  height: 100svh;
+  /* height: 100svh; */
   background: url("../img/avif/about_mobile.avif") lightgray 50% / cover
     no-repeat;
   background-position: center center;
@@ -15,7 +18,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 @media screen and (min-width: 1200px) {
@@ -27,5 +30,341 @@
     /* justify-content: center; */
   }
 }
+/* HERO */
+.title,
+.subtitle__text,
+.subtitle__title,
+.list__technlology {
+  color: var(--color-grey-light);
+}
+.title {
+  margin: 2.5rem 0rem;
 
+  text-align: center;
+  font-family: Quicksand-bold;
+  font-size: 4rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.2rem;
+}
+.subtitle {
+  font-family: "Quicksand-regular";
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.1rem;
+  gap: 3rem;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 2rem 1rem;
+}
+@media screen and (min-width: 1200px) {
+  .subtitle {
+    margin-left: 40rem;
+  }
+  .subtitle__title {
+    font-size: 3.5rem;
+  }
+  .subtitle__text {
+    font-size: 2.3rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.35rem;
+  }
+}
 
+.about__list {
+  padding: 5rem 1rem;
+}
+
+.list__technologies {
+  list-style: disc;
+  color: var(--text-color-primary);
+
+  font-family: Quicksand-regular;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  display: inline-flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+@media screen and (min-width: 1200px) {
+  .list__technologies {
+    font-size: 2rem;
+    margin-left: 35rem;
+  }
+}
+.list__technlology {
+  text-align: left;
+}
+
+/* CARD ABOUT US */
+.card__aboutus {
+  width: 80%;
+  margin: 4.5rem auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2.5rem;
+  background-color: var(--bg-color-card);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+@media screen and (max-width: 1200px) {
+  .card__aboutus {
+    width: 100%;
+    margin: 0rem;
+    margin-bottom: 4rem;
+    margin-top: 4rem;
+  }
+}
+.article__top {
+  display: flex;
+  gap: 2rem;
+  flex-direction: column;
+}
+.top__title {
+  color: var(--color-brown);
+  text-align: center;
+  font-family: "Quicksand-medium";
+  font-size: 4.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+@media screen and (max-width: 1200px) {
+  .top__title {
+    font-size: 2.5rem;
+  }
+}
+.article__bottom {
+  display: flex;
+  gap: 2rem;
+  flex-direction: row;
+  font-family: "Quicksand-regular";
+  align-items: center;
+}
+@media screen and (max-width: 1200px) {
+  .article__bottom {
+    flex-direction: column;
+  }
+}
+.bottom__img {
+  width: 30%;
+}
+@media screen and (max-width: 1200px) {
+  .bottom__img {
+    width: 65%;
+  }
+}
+.article__bottom-content {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 2rem;
+  align-items: center;
+}
+@media screen and (max-width: 1200px) {
+  .article__bottom-content {
+    width: 100%;
+  }
+}
+.bottom__text {
+  color: var(--text-color-secondary);
+
+  font-size: 2.7rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+
+  text-align: center;
+  font-family: Quicksand-regular;
+  letter-spacing: 0.01288rem;
+  line-height: 156.1%;
+}
+@media screen and (max-width: 1200px) {
+  .bottom__text {
+    font-size: 1.25rem;
+  }
+}
+
+/* FIXED IMAGE */
+.fixedimg__container {
+  position: relative;
+  width: 80%;
+  height: 75rem;
+}
+@media screen and (max-width: 1200px) {
+  .fixedimg__container {
+    width: 100%;
+    height: auto;
+  }
+}
+.fixedimg1 {
+  width: 65%;
+  height: 48.3125rem;
+  background-image: url(../img/avif/about_interior-desktop.avif);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  /* background-position: inherit; */
+  /* width: 100svw; */
+  /* height: 100svh; */
+}
+@media screen and (max-width: 1200px) {
+  .fixedimg1 {
+    background-image: url(../img/avif/about_interior_mobile.avif);
+    height: 29rem;
+    width: 100%;
+    background-size: cover;
+    background-position: center center;
+  }
+}
+.fixedimg2 {
+  width: 55%;
+  height: 35rem;
+  position: absolute;
+  top: 37rem;
+  right: 0;
+  background-image: url(../img/avif/about_exterior.avif);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  /* background-position: inherit; */
+  /* width: 100svw; */
+  /* height: 100svh; */
+}
+@media screen and (max-width: 1200px) {
+  .fixedimg2 {
+    display: none;
+  }
+}
+
+/* BUTTONS */
+.location__btn-reserve {
+  display: inline-flex;
+  padding: 1.5rem 7rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.9375rem;
+  background: linear-gradient(180deg, rgb(73, 16, 16), rgb(110, 7, 7));
+
+  color: var(--text-color-primary);
+  font-size: 2.5rem;
+  font-family: Quicksand-bold;
+  border: none;
+  box-shadow: 0px 4px 23.9px 0px #000;
+}
+@media screen and (max-width: 1200px) {
+  .location__btn-reserve {
+    /* flex: 0 1 25rem; */
+    padding: 1.5rem 5rem;
+    font-size: 2rem;
+  }
+}
+/* LOCATION INFORMATION */
+.location__information {
+  width: 80%;
+  background-color: var(--color-brown);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2rem;
+  margin: 5rem 0rem;
+  height: auto;
+  align-items: center;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  justify-content: center;
+}
+@media screen and (max-width: 1200px) {
+  .location__information {
+    width: 100%;
+    flex-direction: column;
+    padding-bottom: 0;
+  }
+}
+.location__title {
+  flex-basis: 100%;
+  color: var(--color-grey-light);
+  text-align: center;
+  font-family: Quicksand-bold;
+  color: var(--color-grey-light);
+  font-size: 2.8rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.17rem;
+}
+.location__subtitle {
+  width: 90%;
+  padding: 4rem;
+  display: flex;
+  flex: 1 1 40%;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
+  flex-wrap: wrap;
+  order: 2;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.17rem;
+}
+@media screen and (max-width: 1200px) {
+  .location__subtitle {
+    order: 1;
+    padding: none;
+  }
+}
+
+.location__subtitle-text {
+  color: var(--color-grey-light);
+  font-size: 2.8rem;
+  font-family: Quicksand-medium;
+}
+@media screen and (max-width: 1200px) {
+  .location__subtitle-text {
+    font-size: 2rem;
+  }
+}
+.location__list {
+  text-align: left;
+  list-style: disc;
+  padding: 2rem 1rem;
+}
+.location__list-item {
+  color: var(--color-grey-light);
+  font-size: 2.5rem;
+  font-family: Quicksand-medium;
+}
+@media screen and (max-width: 1200px) {
+  .location__list-item {
+    font-size: 1.7rem;
+  }
+}
+.google__maps {
+  padding: 4rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex: 1 1 40%;
+  order: 1;
+}
+@media screen and (max-width: 1200px) {
+  .google__maps {
+    order: 2;
+    padding: 0;
+    padding-top: 4rem;
+  }
+}
+iframe {
+  flex: 1;
+}
