--- a/css/header.css
+++ b/css/header.css
@@ -90,11 +90,13 @@
 }
 
 .aside__darkmodebutton {
-  position: absolute;
-  top: 11rem;
-  right: 0rem;
+  /* position: absolute; */
+  /* top: 5rem; */
+  /* right: 3rem; */
   /* background: var(--color-grey-light); */
-  padding: 1rem;
+  height: auto;
+  width: 2.5rem;
+  padding: .5rem;
   border: 1px solid var(--text-color-secondary);
   border-radius: 9px;
   cursor: pointer;
