--- a/css/header.css
+++ b/css/header.css
@@ -115,14 +115,14 @@
 @media screen and (max-width: 1200px){
   .nav{
     /* display: none; */
-    padding: 6rem 1rem;
+    padding: 2rem 1rem;
     position: absolute;
     top: 0px;
     right: 0px;
-    width:24rem;
+    width: 80%;
     height: auto;
-    /* background-image: linear-gradient(120deg, rgb(212, 252, 121) 0%, rgb(150, 230, 161) 100%); */
-    background-color: var(--bg-color-header);
+    background-image: linear-gradient(265deg, rgb(248 224 10) 0%, rgb(232 190 113) 100%); 
+    /* background-color: var(--bg-color-header); */
     /* display: flex;
     flex-direction: column;
     justify-content: space-evenly;
