--- a/css/menu.css
+++ b/css/menu.css
@@ -128,7 +128,7 @@
 @media screen and (max-width: 1200px) {
   .aside {
     flex: 0 1 29rem;
-    margin: 1rem 1rem 13rem 1rem;
+    margin: 1rem 1rem 6rem 1rem;
   }
 }
 .aside__discount {
@@ -144,6 +144,14 @@
   font-family: Quicksand-bold;
   border: none;
   box-shadow: 0px 4px 23.9px 0px #000;
+}
+@media screen and (max-width: 1200px) {
+  .aside__discount {
+    font-size: 1.5rem;
+    padding: 1rem 1.5rem;
+    width: 100%;
+  }
+  
 }
 
 .menu__container {
