discount page complete

--- a/css/discounts.css
+++ b/css/discounts.css
@@ -1,400 +1,250 @@
 .main {
-    width: 100svw;
-    /* height: 100svh; */
-    padding-top: 0;
-    font-family: "Quicksand-medium";
-    text-align: center;
-  }
+  width: 100svw;
+  /* height: 100svh; */
+  padding-top: 0;
+  font-family: "Quicksand-medium";
+  text-align: center;
+}
+.hero__img {
+  width: 100svw;
+  height: 100svh;
+  background-image: url("../img/avif/discount-desktop-hero.avif");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  /* background-image: url("/img/index/home_desktop.png"); */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: end;
+}
+@media screen and (max-width: 1200px) {
   .hero__img {
     width: 100svw;
-    height: 100svh;
-    background-image: url("../img/avif/home_desktop.avif");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    /* background-image: url("/img/index/home_desktop.png"); */
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    height: auto;
+    background-image: url("../img/avif/discount-mobile-hero.avif");
+    background-position: top center;
+    justify-content: center;
   }
-  @media screen and (max-width: 1200px) {
-    .hero__img {
-      width: 100svw;
-      height: auto;
-      background-image: url("../img/avif/home_mobile.avif");
-      background-position: top center;
-      justify-content: center;
-    }
-  }
+}
+.title__container {
+  /* height: 56rem;
+    width: 91rem; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 6rem;
+  padding: 7rem;
+  flex: 0 1 85rem;
+  background: rgba(53, 53, 53, 0.2);
+}
+@media screen and (max-width: 1200px) {
   .title__container {
-    padding-left: 6rem;
+    width: 100%;
+    padding: 13rem 1rem 1rem 1rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 9rem;
-    flex: 0 1 58rem;
+    gap: 2rem;
+    margin-bottom: 0rem;
   }
-  @media screen and (max-width: 1200px) {
-    .title__container {
-      width: 100%;
-      padding: 7rem 0rem;
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      margin-bottom: 0rem;
-    }
-  }
+}
+.title,
+.title-2 {
+  width: 100%;
+  color: var(--color-grey-light);
+  font-family: Quicksand-bold;
+  font-size: 4rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.2625rem;
+  text-align: left;
+}
+.title-2 {
+  font-size: 2.5rem;
+}
+@media screen and (max-width: 1200px) {
   .title {
-    color: var(--text-color-secondary);
-    font-size: 2.8rem;
-    font-size: 5rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 125.175%; /* 7.5105rem */
-    letter-spacing: 0.42rem;
+    font-size: 3rem;
   }
-  @media screen and (max-width: 1200px) {
-    .title {
-      font-size: 3rem;
-    }
-  }
-  .subtitle {
-    display: flex;
-  
-    flex-direction: column;
-    gap: 1.6rem;
-    padding: 1.5rem;
-    color: var(--text-color-secondary);
-    border-radius: 1rem;
-    background: var(--bg-color-card-semi-transparent);
-  }
+}
+.subtitle {
+  display: flex;
+  flex-direction: column;
+  font-family: Quicksand-regular;
+
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.11825rem;
+  gap: 1.6rem;
+  padding: 1.5rem;
+  color: var(--color-grey-light);
+  border-radius: 1rem;
+  /* background: var(--bg-color-card-semi-transparent); */
+}
+.subtitle__text {
+  color: var(--color-grey-light);
+  font-family: Quicksand-regular;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125.175%; /* 3.16613rem */
+  letter-spacing: 0.13rem;
+  text-align: left;
+  list-style: disc;
+}
+@media screen and (max-width: 1200px) {
   .subtitle__text {
-    font-family: "Quicksand-regular";
-    color: var(--text-color-secondary);
-  
-    text-align: center;
-    font-family: Quicksand-regular;
-    font-size: 2.5rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 125.175%; /* 3.16613rem */
-    letter-spacing: 0.17706rem;
+    font-size: 1.5rem;
   }
-  @media screen and (max-width: 1200px) {
-    .subtitle__text {
-      font-size: 1.5rem;
-    }
-  }
-  .aside {
-    flex: 0 1 39rem;
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    justify-content: space-between;
-    gap: 12rem;
-    margin-right: 5rem;
-  }
-  @media screen and (max-width: 1200px) {
-    .aside {
-      /* width: 95%; */
-      flex: 0 1 29rem;
-      margin: 1rem 1rem 13rem 1rem;
-      /* padding: 7rem 0rem; */
-      /* display: flex; */
-      /* flex-direction: column; */
-      /* gap: 2rem; */
-      /* margin-bottom: 0rem; */
-    }
-  }
-  .aside__discount {
-    display: inline-flex;
-    padding: 1.5rem 2rem;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0.9375rem;
-    background: linear-gradient(180deg, rgb(73, 16, 16), rgb(110, 7, 7));
-  
-    color: var(--text-color-primary);
-    font-size: 2.5rem;
-    font-family: Quicksand-bold;
-    border: none;
-    box-shadow: 0px 4px 23.9px 0px #000;
-  }
-  
-  .aside__openinghours {
-    color: var(--text-color-secondary);
-    border-radius: 0.9375rem;
-    background: var(--bg-color-card-semi-transparent);
-    text-align: center;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 125.175%; /* 3.16613rem */
-    letter-spacing: 0.18rem;
-    font-size: 2rem;
-    padding: 2rem;
-  
-    font-family: Quicksand-regular;
-  
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 3rem;
-  }
-  .openinghours__title {
-    font-family: "Quicksand-medium";
-    font-size: 2.5rem;
-  }
-  .openinghours__phone {
-    font-size: 2.8rem;
-  }
-  .promotion {
-    position: relative;
-    width: 80%;
-    margin: 10rem auto;
-    background-color: var(--color-beige);
-  
-    display: flex;
-    flex-wrap: wrap;
-  
-    padding: 2.5rem;
-    border-radius: 3rem;
-  }
-  @media screen and (max-width: 1200px) {
+}
+.text__hero-bold {
+  color: var(--color-yellow);
+}
+
+/*PROMOTIONS*/
+.promotion {
+  position: relative;
+  width: 80%;
+  margin: 10rem auto;
+  background-color: var(--bg-color-card);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+
+  padding: 7rem;
+  border-radius: 1rem;
+  gap: 6rem;
+}
+@media screen and (max-width: 1200px) {
     .promotion {
-      width: 95%;
-      /* width: 29rem; */
-      flex-direction: column;
-      padding: 6rem 1rem;
-      border-radius: 0;
-      gap: 6rem;
-    }
-  }
-  .promotion__left {
-    flex: 2;
-    /* width: 70%; */
-    padding: 0rem 8rem;
-  }
-  @media screen and (max-width: 1200px) {
-    .promotion__left {
-      padding: 0rem;
-    }
-  }
-  .promotion__right {
-    flex: 1;
-    text-align: center;
-    display: flex;
+    width: 100%;
+    /* width: 29rem; */
     flex-direction: column;
-    align-items: center;
-    justify-content: end;
-    margin-bottom: 4rem;
+    padding: 6rem 0rem;
+    border-radius: 0;
+    gap: 0rem;
   }
-  
+}
+.promotion__top {
+  flex: 2;
+  /* width: 70%; */
+  padding: 0rem 8rem;
+}
+@media screen and (max-width: 1200px) {
+  .promotion__top {
+    padding: 0rem;
+  }
+}
+.promotion__title {
+  color: var(--text-color-secondary);
+  text-align: center;
+  font-family: Quicksand-bold;
+  font-size: 4rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 125.175%; /* 5.47638rem */
+  letter-spacing: 0.30625rem;
+}
+@media screen and (max-width: 1200px) {
   .promotion__title {
-    color: #a00f0f;
-    /* text-align: center; */
-    font-family: "Quicksand-medium";
-    font-size: 5rem;
-    margin-bottom: 2rem;
+    font-size: 2rem;
   }
-  @media screen and (max-width: 1200px) {
-    .promotion__title {
-      font-size: 2rem;
-    }
+}
+.promotion__social {
+  display: flex;
+  /* width: 48.1875rem; */
+  height: auto;
+  padding: 6rem 1rem;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  flex-shrink: 0;
+}
+.promotion__social img {
+  width: 6rem;
+  height: 6rem;
+}
+
+.promotion__bottom {
+  flex: 1;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+  gap: 4rem;
+  /* margin-bottom: 4rem; */
+}
+@media screen and (max-width: 1200px) {
+  .promotion__bottom {
+    width: 90%;
   }
+}
+.promotion__article-title {
+  color: var(--text-color-secondary);
+
+  font-family: Quicksand-medium;
+  font-size: 3.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 125.175%; /* 3.91169rem */
+  letter-spacing: 0.21875rem;
+}
+@media screen and (max-width: 1200px) {
+  .promotion__article-title {
+    font-size: 1.5rem;
+  }
+    
+}
+.promotion__text,
+.promotion__list-item, .promotion__list {
+    text-align: left;
+    width: 100%;
+    
+  font-family: "Quicksand-regular";
+  color: var(--text-color-secondary);
+  font-size: 1.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 173%; /* 3.24375rem */
+  letter-spacing: 0.13125rem;
+}
+@media screen and (max-width: 1200px) {
   .promotion__text {
-    font-family: "Quicksand-regular";
-    font-size: 3.5rem;
+    font-size: 0.8rem;
   }
-  @media screen and (max-width: 1200px) {
-    .promotion__text {
-      font-size: 1.7rem;
+}
+.promotion__list{
+    width: 96%;
+    padding-bottom: 4rem;
+}
+@media screen and (max-width: 1200px) {
+    .promotion__text, .promotion__list-item, .promotion__list {
+      font-size: 1rem;
     }
   }
-  .promotion__img {
-    position: absolute;
-    margin-left: auto;
-    margin-bottom: 3rem;
-    right: 7rem;
-  }
-  @media screen and (max-width: 1200px) {
-    .promotion__img {
-      margin-bottom: 5rem;
-      right: 1rem;
-      top: -4rem;
-      height: 9rem;
-    }
-  }
-  .discount {
-    display: inline-flex;
-    padding: 1.5rem 2rem;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0.9375rem;
-    background: linear-gradient(180deg, rgb(73, 16, 16), rgb(110, 7, 7));
-  
-    color: var(--text-color-primary);
-    font-size: 2.5rem;
-    font-family: Quicksand-bold;
-    border: none;
-    box-shadow: 0px 4px 23.9px 0px #000;
-  }
-  @media screen and (max-width: 1200px) {
-    .discount,
-    .aside__discount {
-      padding: 1.5rem 1rem;
-      font-size: 2rem;
-    }
-  }
-  
-  /* FIXED IMAGE */
+
+/* FIXED IMAGE */
+.fixedimg {
+    width: 40rem;
+height: 36rem;
+margin: 10rem auto;
+flex-shrink: 0;
+  background-image: url(../img/avif/discount-desktop-flag.avif);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+
+}
+@media screen and (max-width: 1200px) {
   .fixedimg {
-    background-image: url(../img/avif/home-table_desktop.avif);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    background-image: url(../img/avif/discount-mobile-flag.avif);
   }
-  @media screen and (max-width: 1200px) {
-    .fixedimg {
-      background-image: url(../img/avif/home-table_mobile.avif);
-    }
-  }
-  
-  .pizzeriainfo {
-    width: 80%;
-    margin: 14rem auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2rem;
-  }
-  .pizzeriainfo__title,
-  .top__title {
-    color: var(--color-brown);
-    text-align: center;
-    font-family: "Quicksand-medium";
-    font-size: 5rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-  @media screen and (max-width: 1200px) {
-    .pizzeriainfo__title,
-    .top__title {
-      font-size: 2.5rem;
-    }
-  }
-  .pizzeriainfo__text {
-    color: var(--text-color-primary);
-    font-family: "Quicksand-medium";
-  
-    font-size: 3.2rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-  @media screen and (max-width: 1200px) {
-    .pizzeriainfo__text {
-      font-size: 1.8rem;
-      text-align: left;
-    }
-  }
-  
-  /* SIGNATURE PIZZA MODULE */
-  .signaturepizza {
-    width: 80%;
-    margin: 4.5rem auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2rem;
-    padding: 2.5rem;
-    background-color: var(--bg-color-card);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  }
-  @media screen and (max-width: 1200px) {
-    .signaturepizza {
-      width: 100%;
-      margin: 0rem;
-      margin-bottom: 14rem;
-    }
-  }
-  .article__top {
-    display: flex;
-    gap: 2rem;
-    flex-direction: column;
-  }
-  
-  .top__text {
-    color: var(--text-color-secondary);
-    font-family: "Quicksand-light";
-    font-size: 2rem;
-  
-    text-align: center;
-  
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-  
-  .article__bottom {
-    display: flex;
-    gap: 2rem;
-    flex-direction: row;
-    font-family: "Quicksand-regular";
-    align-items: center;
-  }
-  @media screen and (max-width: 1200px) {
-    .article__bottom {
-      flex-direction: column;
-    }
-  }
-  .bottom__img {
-    width: 30%;
-  }
-  @media screen and (max-width: 1200px) {
-    .bottom__img {
-      width: 65%;
-    }
-  }
-  .article__bottom-content {
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 2rem;
-    align-items: center;
-  }
-  @media screen and (max-width: 1200px) {
-    .article__bottom-content {
-      width: 100%;
-    }
-  }
-  .bottom__title {
-    color: var(--text-color-secondary);
-  
-    text-align: center;
-  
-    font-size: 2rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-  .bottom__text {
-    color: var(--text-color-secondary);
-  
-    font-size: 1.3rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  
-    text-align: center;
-    font-family: Quicksand-light;
-    letter-spacing: 0.01288rem;
-  }
-  
+}
