--- a/css/header.css
+++ b/css/header.css
@@ -121,7 +121,7 @@
     right: 0px;
     width: 80%;
     height: auto;
-    background-image: linear-gradient(265deg, rgb(248 224 10) 0%, rgb(232 190 113) 100%); 
+    background-image: linear-gradient(265deg, rgb(237, 167, 46) 0%, rgba(232, 190, 113, 0.425) 100%); 
     /* background-color: var(--bg-color-header); */
     /* display: flex;
     flex-direction: column;
