--- a/css/order.css
+++ b/css/order.css
@@ -71,6 +71,11 @@
   border-radius: 1rem;
   background: var(--bg-color-card-semi-transparent);
 }
+@media screen and (max-width: 1200px) {
+  .subtitle {
+    width: 90%;
+  }
+}
 .subtitle__text {
   font-family: "Quicksand-regular";
   color: var(--text-color-secondary);
@@ -109,7 +114,7 @@
     /* margin-bottom: 0rem; */
   }
 }
-.aside__discount {
+.aside__discount, .pizza__order {
   display: inline-flex;
   padding: 1.5rem 2rem;
   justify-content: center;
@@ -126,7 +131,7 @@
 
 .aside__openinghours {
   color: var(--text-color-secondary);
-  border-radius: 0.9375rem;
+  border-radius: 1rem;
   background: var(--bg-color-card-semi-transparent);
   text-align: center;
   font-style: normal;
@@ -148,86 +153,375 @@
   font-family: "Quicksand-medium";
   font-size: 2.5rem;
 }
+@media screen and (max-width: 1200px) {
+  .openinghours__title {
+    font-size: 1.7rem;
+    font-style: normal;
+font-weight: 500;
+line-height: normal;
+  }
+}
 .openinghours__phone {
   font-size: 2.8rem;
 }
-.promotion {
+@media screen   and (max-width: 1200px) {
+  .openinghours__phone {
+    font-size: 1.9rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+}
+.order__phone {
   position: relative;
   width: 80%;
   margin: 10rem auto;
-  background-color: var(--color-beige);
+  background-color: var(--bg-color-card);
 
   display: flex;
   flex-wrap: wrap;
 
   padding: 2.5rem;
-  border-radius: 3rem;
+  border-radius: 1rem;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 @media screen and (max-width: 1200px) {
-  .promotion {
+  .order__phone {
     width: 95%;
     /* width: 29rem; */
     flex-direction: column;
     padding: 6rem 1rem;
-    border-radius: 0;
-    gap: 6rem;
+    /* border-radius: 0; */
+    gap: 2rem;
+    margin: 6rem auto;
   }
-}
-.promotion__left {
-  flex: 2;
-  /* width: 70%; */
-  padding: 0rem 8rem;
-}
-@media screen and (max-width: 1200px) {
-  .promotion__left {
-    padding: 0rem;
-  }
-}
-.promotion__right {
-  flex: 1;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: end;
-  margin-bottom: 4rem;
 }
 
-.promotion__title {
-  color: #a00f0f;
+.phone__title,
+.form__title {
+  flex: 1 1 100%;
+  color: var(--text-color-secondary);
   /* text-align: center; */
   font-family: "Quicksand-medium";
-  font-size: 5rem;
+  font-size: 3.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125.175%; /* 4.41788rem */
+  letter-spacing: 0.24706rem;
   margin-bottom: 2rem;
 }
 @media screen and (max-width: 1200px) {
-  .promotion__title {
+  .phone__title, .form__title {
     font-size: 2rem;
+    text-align: left;
   }
 }
-.promotion__text {
-  font-family: "Quicksand-regular";
-  font-size: 3.5rem;
+
+.phone__left {
+  flex: 1;
+  /* width: 70%; */
+  padding: 0rem 8rem;
+  color: var(--text-color-secondary);
+  font-family: "Quicksand-medium";
+  text-align: center;
+  font-size: 2.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 @media screen and (max-width: 1200px) {
-  .promotion__text {
+  .phone__left {
+    order: 2;
+    padding: 0rem;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 125.175%;
+    letter-spacing: 0.11431rem;
+   
+  }
+  
+}
+.phone__right {
+  flex: 2;
+  color: var(--text-color-secondary);
+  font-family: "Quicksand-regular";
+  /* text-align: center; */
+  font-size: 2.2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125.175%; /* 3.16613rem */
+  letter-spacing: 0.17706rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* justify-content:flex-start; */
+  /* margin-bottom: 4rem; */
+  gap: 2rem;
+}
+@media screen and (max-width: 1200px) {
+  .phone__right {
+    font-size: 1.7rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 125.175%;
+    letter-spacing: 0.11431rem;
+  }
+  
+}
+
+.right__text {
+  font-family: "Quicksand-regular";
+  font-size: 2.5rem;
+  text-align: left;
+}
+@media screen and (max-width: 1200px) {
+  .right__text {
     font-size: 1.7rem;
   }
 }
-.promotion__img {
-  position: absolute;
-  margin-left: auto;
-  margin-bottom: 3rem;
-  right: 7rem;
+.phone--bold{ 
+  display: block;
+  font-size: 2.7rem;
+  line-height: 3;
 }
 @media screen and (max-width: 1200px) {
-  .promotion__img {
-    margin-bottom: 5rem;
-    right: 1rem;
-    top: -4rem;
-    height: 9rem;
+  .phone--bold{
+    width: 100%;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    line-height: 2;
+  }
+  
+}
+
+
+/* FORM SECTION */
+.form__container {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 1rem;
+
+  position: relative;
+  width: 80%;
+  margin: 10rem auto;
+  background-color: var(--bg-color-card);
+  color: var(--text-color-secondary);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+
+  padding: 2.5rem;
+  border-radius: 1rem;
+}
+@media screen and (max-width: 1200px) {
+  .form__container {
+    width: 95%;
+    /* width: 29rem; */
+    flex-direction: column;
+    padding: 4rem 1rem;
+    /* border-radius: 0; */
+    gap: 2rem;
   }
 }
+.form__subtitle {
+  font-family: "Quicksand-regular";
+  font-size: 2.2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125.175%; /* 2.775rem */
+  letter-spacing: 0.15519rem;
+}
+.form__subtitle-smallprint, .bottom__info {
+  font-family: "Quicksand-regular";
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125.175%; /* 1.5rem */
+  letter-spacing: 0.15519rem;
+}
+@media screen and (max-width: 1200px) {
+  .form__subtitle{
+    font-size: 1.3rem;
+  }
+  .form__subtitle-smallprint, .bottom__info {
+    font-size: 1.2rem;
+  }
+  
+}
+.form {
+  padding: 5rem 0 5rem 0;
+  width: 100%;
+  /* gap: 1.5rem; */
+  display: flex;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 1200px) {
+  .form {
+
+  }
+}
+.form__section {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  
+  /* flex: 1 1 clamp(2rem, 10rem, 20rem); */
+  flex: 1 1 48%;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 1200px) {
+  .form__section {
+    flex: 1 1 100%;
+    gap: 1rem;
+    flex-wrap: wrap;
+    
+  }
+  
+}
+.form__label{
+  text-align: left;
+  font-size: 1.723rem;
+font-style: normal;
+font-weight: 600;
+line-height: 125.175%; /* 2.15675rem */
+letter-spacing: 0.12063rem;
+}
+.form__left {
+  /* width: 48%; */
+  /* height: auto; */
+  flex-direction: column;
+  padding: 4rem;
+}
+@media screen and (max-width: 1200px) {
+  .form__left {
+    width: 100%;
+    padding: 0;
+    flex-direction: column;
+    padding: 4rem;
+  }
+  
+}
+.form__right {
+  width: 50%;
+  height: auto;
+  border: 2px solid var(--color-green);
+  padding: 4rem;
+  align-items: center;
+}
+.form__label {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125.175%; /* 1.5rem */
+  letter-spacing: 0.15519rem;
+}
+.form__input {
+  width: 100%;
+  padding: 1rem;
+  border-radius: 0.7rem;
+  border: 1px solid var(--text-color-secondary);
+  background: var(--bg-color-card-semi-transparent);
+  color: var(--text-color-secondary);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125.175%; /* 1.5rem */
+  letter-spacing: 0.15519rem;
+}
+.form__dropdown {
+  width: 100%;
+  padding: 1rem;
+  border-radius: 0.7rem;
+  border: 1px solid var(--text-color-secondary);
+  background: var(--bg-color-card-semi-transparent);
+  color: var(--text-color-secondary);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125.175%; /* 1.5rem */
+  letter-spacing: 0.15519rem;
+}
+.form__dropdown-option {
+  font-size: 1rem;
+font-style: normal;
+font-weight: 600;
+line-height: 125.175%; /* 1.5rem */
+letter-spacing: 0.15519rem;
+}
+
+.form__bottom {
+  flex: 0 0 100%;
+  padding: 4rem;
+  justify-content: space-evenly;
+}
+
+.pizza__selection{
+  width: 100%;
+    font-size: 3rem;
+}
+@media screen and (max-width: 1200px) {
+  .pizza__selection{
+    font-size: 2rem;
+  }
+
+
+.cardwrapper{
+  text-align: left;
+  /* padding:3rem; */
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  flex: 1 1 100%;
+}
+.pizza__order {
+  width: 100%;
+}
+}
+
+
+
+
+/* GREEN SECTION */
+.order__information {
+  width: 80%;
+  margin-bottom: 10rem;
+  background-color: var(--color-green);
+  display: inline-flex;
+  padding: 8rem;
+  align-items: center;
+  color: var(--text-color-secondary);
+
+  text-align: left;
+  font-family: "Quicksand-medium";
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+
+.order__information--bold {
+  font-weight: 700;
+  font-size: 2.1rem;
+  text-decoration: underline;
+}
+@media screen and (max-width: 1200px) {
+  .order__information {
+    display: none;
+  }
+  
+}
+
+
+
+
+
 .discount {
   display: inline-flex;
   padding: 1.5rem 2rem;
@@ -243,157 +537,8 @@
   box-shadow: 0px 4px 23.9px 0px #000;
 }
 @media screen and (max-width: 1200px) {
-  .discount,
-  .aside__discount {
+  .pizza__order {
     padding: 1.5rem 1rem;
     font-size: 2rem;
   }
-}
-
-/* FIXED IMAGE */
-.fixedimg {
-  background-image: url(../img/avif/home-table_desktop.avif);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  width: 100vw;
-  height: 100vh;
-}
-@media screen and (max-width: 1200px) {
-  .fixedimg {
-    background-image: url(../img/avif/home-table_mobile.avif);
-  }
-}
-
-.pizzeriainfo {
-  width: 80%;
-  margin: 14rem auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2rem;
-}
-.pizzeriainfo__title,
-.top__title {
-  color: var(--color-brown);
-  text-align: center;
-  font-family: "Quicksand-medium";
-  font-size: 5rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-@media screen and (max-width: 1200px) {
-  .pizzeriainfo__title,
-  .top__title {
-    font-size: 2.5rem;
-  }
-}
-.pizzeriainfo__text {
-  color: var(--text-color-primary);
-  font-family: "Quicksand-medium";
-
-  font-size: 3.2rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-@media screen and (max-width: 1200px) {
-  .pizzeriainfo__text {
-    font-size: 1.8rem;
-    text-align: left;
-  }
-}
-
-/* SIGNATURE PIZZA MODULE */
-.signaturepizza {
-  width: 80%;
-  margin: 4.5rem auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2rem;
-  padding: 2.5rem;
-  background-color: var(--bg-color-card);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-@media screen and (max-width: 1200px) {
-  .signaturepizza {
-    width: 100%;
-    margin: 0rem;
-    margin-bottom: 14rem;
-  }
-}
-.article__top {
-  display: flex;
-  gap: 2rem;
-  flex-direction: column;
-}
-
-.top__text {
-  color: var(--text-color-secondary);
-  font-family: "Quicksand-light";
-  font-size: 2rem;
-
-  text-align: center;
-
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.article__bottom {
-  display: flex;
-  gap: 2rem;
-  flex-direction: row;
-  font-family: "Quicksand-regular";
-  align-items: center;
-}
-@media screen and (max-width: 1200px) {
-  .article__bottom {
-    flex-direction: column;
-  }
-}
-.bottom__img {
-  width: 30%;
-}
-@media screen and (max-width: 1200px) {
-  .bottom__img {
-    width: 65%;
-  }
-}
-.article__bottom-content {
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: 2rem;
-  align-items: center;
-}
-@media screen and (max-width: 1200px) {
-  .article__bottom-content {
-    width: 100%;
-  }
-}
-.bottom__title {
-  color: var(--text-color-secondary);
-
-  text-align: center;
-
-  font-size: 2rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-.bottom__text {
-  color: var(--text-color-secondary);
-
-  font-size: 1.3rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-
-  text-align: center;
-  font-family: Quicksand-light;
-  letter-spacing: 0.01288rem;
 }
